--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.18.2",
     "@astrojs/preact": "^2.0.2",
     "@astrojs/rss": "^2.1.0",
     "astro": "^2.0.6",
